<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:text="@string/walk_title_label"
    	style="?android:listSeparatorTextViewStyle"
    	/>
    
    <EditText android:id="@+id/walk_title"
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:hint="@string/walk_title_hint"
        />
    
    <TextView
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/walk_details_label"
	    style="?android:listSeparatorTextViewStyle"
	    />
    
    <EditText android:id="@+id/walk_details"
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:hint="@string/walk_details_hint"
        />
        
  	<Button android:id="@+id/walk_date"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginLeft="16dp"
	    android:layout_marginRight="16dp"
	    />
  	
  	<TextView
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/pedometer_label"
	    style="?android:listSeparatorTextViewStyle"
	    />
  	
  	<Button android:id="@+id/pedometer_button"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginLeft="16dp"
	    android:layout_marginRight="16dp"
	    android:hint="@string/pedometer_hint"
	    />

  	<EditText android:id="@+id/steps_taken"
        android:layout_width="120dp"
    	android:layout_height="wrap_content"
    	android:hint="@string/steps_taken"
    	android:layout_gravity="center"
        />

</LinearLayout>
